# Sandbox

./: .gitignore  CMakeLists.txt  Makedefs  Makefile  TODO.md  TileTypes.md  main.cpp
images/: CMakeLists.txt
include/: CollectibleTile.h  Event.h  Game.h  GameLoop.h  Harvest.h  Hero.h  Map.h  MapEntity.h  Tile.h  Tileset.h  Video.h
src/: CollectibleTile.cpp  Event.cpp  Game.cpp  GameLoop.cpp  Hero.cpp  Map.cpp  MapEntity.cpp  Tile.cpp  Tileset.cpp  Video.cpp  main.cpp
test/: CMakeLists.txt  Makefile  test.h
test/src/: CMakeLists.txt  main.cpp
tests/src/: first_test.cpp
